[gd_scene load_steps=4 format=3 uid="uid://bfja2r223caqk"]

[ext_resource type="Script" path="res://postacie/przeciwnik2.gd" id="1_cudq2"]
[ext_resource type="Texture2D" uid="uid://cubx3gaej5c8q" path="res://asety/kolce.png" id="2_hmv8d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gnm7w"]
size = Vector2(64, 24)

[node name="przeciwnik2" type="CharacterBody2D"]
script = ExtResource("1_cudq2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_hmv8d")

[node name="przeciwnikArea2D2" type="Area2D" parent="."]

[node name="przeciwnikAreaCollisionShape2D" type="CollisionShape2D" parent="przeciwnikArea2D2"]
position = Vector2(0, 20)
shape = SubResource("RectangleShape2D_gnm7w")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="body_shape_entered" from="przeciwnikArea2D2" to="." method="_on_przeciwnik_area_2d_2_body_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
